codegen/ui_tests/export_fn_path_attr.stderr
error: expecting attribute name
  --> ui_tests/export_fn_path_attr.rs:10:13
   |
10 | #[export_fn(rhai::name = "thing")]
   |             ^^^^

error[E0425]: cannot find function `test_fn` in this scope
  --> ui_tests/export_fn_path_attr.rs:17:8
   |
17 |     if test_fn(n) {
   |        ^^^^^^^ not found in this scope
